# Vulkan

./: .editorconfig  .gitignore  visitor.cpp
Android/app/: CMakeLists.txt
Android/app/ndk_21_boost_1.72.0/include/boost/: version_ndk.hpp
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_atomic-1.72.0/: boost_atomic-config.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_chrono-1.72.0/: boost_chrono-config.cmake  libboost_chrono-variant-shared.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_container-1.72.0/: boost_container-config.cmake  libboost_container-variant-static.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_context-1.72.0/: boost_context-config.cmake  libboost_context-variant-static.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_contract-1.72.0/: boost_contract-config.cmake  libboost_contract-variant-shared.cmake  libboost_contract-variant-static.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_coroutine-1.72.0/: boost_coroutine-config.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_date_time-1.72.0/: boost_date_time-config.cmake  libboost_date_time-variant-static.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_exception-1.72.0/: boost_exception-config.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_fiber-1.72.0/: boost_fiber-config.cmake  libboost_fiber-variant-shared.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_fiber_numa-1.72.0/: boost_fiber_numa-config.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_filesystem-1.72.0/: boost_filesystem-config.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_graph-1.72.0/: boost_graph-config.cmake  libboost_graph-variant-shared.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_graph_parallel-1.72.0/: boost_graph_parallel-config.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_headers-1.72.0/: boost_headers-config.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_iostreams-1.72.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-shared.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_locale-1.72.0/: boost_locale-config.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_log-1.72.0/: boost_log-config.cmake  libboost_log-variant-static.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_log_setup-1.72.0/: boost_log_setup-config.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_math_c99-1.72.0/: boost_math_c99-config.cmake  libboost_math_c99-variant-shared.cmake  libboost_math_c99-variant-static.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_math_c99f-1.72.0/: boost_math_c99f-config.cmake  libboost_math_c99f-variant-shared.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_math_c99l-1.72.0/: boost_math_c99l-config.cmake  libboost_math_c99l-variant-static.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_math_tr1-1.72.0/: boost_math_tr1-config.cmake  libboost_math_tr1-variant-static.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_math_tr1f-1.72.0/: boost_math_tr1f-config.cmake  libboost_math_tr1f-variant-shared.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_math_tr1l-1.72.0/: boost_math_tr1l-config.cmake  libboost_math_tr1l-variant-shared.cmake  libboost_math_tr1l-variant-static.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_mpi-1.72.0/: boost_mpi-config.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_prg_exec_monitor-1.72.0/: boost_prg_exec_monitor-config.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_program_options-1.72.0/: boost_program_options-config.cmake  libboost_program_options-variant-static.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_random-1.72.0/: boost_random-config.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_regex-1.72.0/: boost_regex-config.cmake  libboost_regex-variant-shared.cmake  libboost_regex-variant-static.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_serialization-1.72.0/: boost_serialization-config.cmake  libboost_serialization-variant-shared.cmake  libboost_serialization-variant-static.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_stacktrace_addr2line-1.72.0/: boost_stacktrace_addr2line-config.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_stacktrace_backtrace-1.72.0/: boost_stacktrace_backtrace-config.cmake
Android/app/ndk_21_boost_1.72.0/libs/arm64-v8a/cmake/boost_stacktrace_basic-1.72.0/: boost_stacktrace_basic-config.cmake  libboost_stacktrace_basic-variant-static.cmake
Android/app/src/main/jni/: AndroidMain.cpp
Chess/: CMakeLists.txt  Chess.h  Repl.cpp  Test.cpp
GA/: CMakeLists.txt  pga3d.cpp  pga3d.h  r2.h  test_pga3d.cpp  test_r2.cpp
Generator/: CMakeLists.txt  main.cpp
Innovator/: Context.h  Defines.h  EventVisitor.cpp  EventVisitor.h  (+17 more)
Scheme/: CMakeLists.txt  Repl.cpp  Scheme.h  Test.cpp
Server/: CMakeLists.txt  Dockerfile  create-certificate.sh  create-cluster.sh  create-network.sh  create-vm.sh  index.html  install-deps.sh  install-docker.sh  main.cpp  server-pod.yaml
Server/chat/: CMakeLists.txt  Dockerfile  app.yaml  build-and-push.sh  chat-pod.yaml  index.html  main.cpp
Server/chat/client/: chat.css  chatclient.js  datachannel.js  index.html
Socket/: CMakeLists.txt  sockets.cpp
Viewer/: .gitattributes  CMakeLists.txt  Window.h  create-renderpass.scm  hello_rasterized_triangle.scm  hello_raytraced_triangle.scm  indexed-shape.scm  main-renderpass.scm  main.cpp  seismic.ktx  sparse-texture.scm  sparse3d.scm  stl-shape.scm  textured_quad.scm  vertex-shape.scm  world.scm
Viewer/crate/: crate.scm  crate2.scm  crate3.scm  fragment.glsl  vertex.glsl
Viewer/sparse3d/: sparse3d.scm  texture3d.scm
Viewer/world/: world.ktx  world.scm
WebSocket/: CMakeLists.txt  client.cpp  server.cpp
(+256 files in other folders)
